--- a/css/global.css
+++ b/css/global.css
@@ -19,7 +19,7 @@ body.no-scroll {
 }
 @media all and (min-width: 992px) {
   body {
-    font-size: 17px;
+    font-size: 16px;
   }
 }
 
@@ -291,7 +291,7 @@ li {
 /* nav */
 nav {
   width: 100%;
-  max-width: 1500px;
+  max-width: 1600px;
   margin: 0 auto;
   top: 0;
   left: 0;
@@ -417,22 +417,40 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   padding: 0 10px;
   margin: 0 auto;
 }
+.sidebar .forpc {
+  width: 85%;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .sidebar .forpc {
+    display: none;
+  }
+}
+@media all and (max-width: 769px) {
+  .sidebar .forpc {
+    display: none;
+  }
+}
+.sidebar .formobile {
+  display: block;
+}
+@media all and (min-width: 992px) {
+  .sidebar .formobile {
+    display: none;
+  }
+}
 .sidebar .nav-brand {
   padding: 20px;
-  -webkit-box-flex: 0.5;
-      -ms-flex: 0.5;
-          flex: 0.5;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
 }
 .sidebar .menu {
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
   -webkit-transition: all 0.35s ease-out;
   transition: all 0.35s ease-out;
 }
 .sidebar .menu > li {
   display: inline-block;
-  width: 12%;
+  width: 12.5%;
   text-align: center;
   position: relative;
 }
@@ -441,17 +459,6 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-@media all and (max-width: 769px) {
-  .sidebar .menu > li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
 }
 .sidebar .menu .menu-link {
   position: relative;
@@ -517,6 +524,16 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   background-color: transparent;
   -webkit-transition: background-color 0.4s ease;
   transition: background-color 0.4s ease;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .sidebar .user-account {
+    display: none;
+  }
+}
+@media all and (max-width: 769px) {
+  .sidebar .user-account {
+    display: none;
+  }
 }
 .sidebar .user-account div {
   display: inline-block;
@@ -700,7 +717,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 .section-box .section {
   color: #fff;
-  max-width: 1500px;
+  max-width: 1600px;
   margin: 80px auto 50px auto;
   padding: 0 30px;
 }
@@ -715,16 +732,40 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
 }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .section-box .section .content-row .row-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+@media all and (max-width: 769px) {
+  .section-box .section .content-row .row-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
 .section-box .section .content-row .row-5 {
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .section-box .section .content-row .row-5 {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+  }
+}
+@media all and (max-width: 769px) {
+  .section-box .section .content-row .row-5 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
 }
 
 footer {
   background-color: #fff;
 }
 footer > div {
-  max-width: 1500px;
+  max-width: 1600px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -740,6 +781,35 @@ footer > div {
       -ms-flex-align: center;
           align-items: center;
   padding: 20px;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer > div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media all and (max-width: 769px) {
+  footer > div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+footer > div div {
+  text-align: left;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer > div div {
+    text-align: center;
+  }
+}
+@media all and (max-width: 769px) {
+  footer > div div {
+    text-align: center;
+  }
 }
 
 /* other share */
