--- a/css/index.css
+++ b/css/index.css
@@ -87,24 +87,26 @@
 
 .showing-list {
   text-align: center;
+  margin-bottom: 20px;
 }
-.showing-list .poster {
-  padding-right: 30px;
+.showing-list a .poster {
+  padding-right: 10px;
 }
-.showing-list .poster img {
+.showing-list a .poster img {
   border-radius: 10px;
   width: 100%;
 }
-.showing-list .movie-title {
+.showing-list a .movie-title {
+  padding-right: 10px;
   margin-top: 10px;
   font-weight: bold;
 }
-.showing-list .movie-title span {
+.showing-list a .movie-title span {
   font-weight: 500;
   display: block;
   margin-top: 5px;
 }
-.showing-list .movie-level {
+.showing-list a .movie-level {
   margin: 15px 0;
   padding: 5px 10px;
   display: inline-block;
