--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,4 @@
-@use "variables" as v;
+@use "variables"as v;
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -13,14 +13,16 @@ html {
 body {
   margin: 0;
   padding: 0;
-   font-size: 15px;
+  font-size: 15px;
   position: relative;
   background-color: v.$bg-color;
+
   &.no-scroll {
     overflow: hidden;
   }
+
   @include v.pc-width {
-    font-size: 17px;
+    font-size: 16px;
   }
 }
 
@@ -54,6 +56,7 @@ a {
   color: v.$font-primary;
   font-weight: normal;
   transition: color 0.3s ease, font-weight 0.4s ease;
+
   &:hover {
     color: v.$white;
     font-weight: bolder;
@@ -275,7 +278,7 @@ nav {
   transition: all 0.5s;
   z-index: 5;
   opacity: 0;
-  
+
 
   &.mini {
     padding: 10px 0;
@@ -301,6 +304,7 @@ nav {
     @include v.pad-width {
       display: flex;
     }
+
     @include v.phone-width {
       display: flex;
     }
@@ -316,14 +320,16 @@ nav {
   }
 
   .input-toggler {
-    & ~ .sidebar .menu {
-      @include v.pad-width { 
+    &~.sidebar .menu {
+      @include v.pad-width {
         position: absolute;
         top: 0;
         bottom: 0;
         left: -300px;
         width: 300px;
-        z-index: 999;}
+        z-index: 999;
+      }
+
       @include v.phone-width {
         position: absolute;
         top: 0;
@@ -332,10 +338,10 @@ nav {
         width: 300px;
         z-index: 999;
       }
-      
+
     }
 
-    & ~ .sidebar-overlay {
+    &~.sidebar-overlay {
       position: absolute;
       background-color: #000;
       width: 100%;
@@ -348,33 +354,34 @@ nav {
     }
 
     &:checked {
-      & ~ .menu-toggler .menu-toggler-line {
+      &~.menu-toggler .menu-toggler-line {
         top: 5px;
         transform: translateY(100px);
         transform: rotate(45deg);
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(2) {
+      &~.menu-toggler .menu-toggler-line:nth-child(2) {
         display: none;
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(3) {
+      &~.menu-toggler .menu-toggler-line:nth-child(3) {
         top: -5px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
 
-      & ~ .sidebar .menu {
+      &~.sidebar .menu {
         left: 0;
       }
 
-      & ~ .sidebar-overlay {
+      &~.sidebar-overlay {
         display: block;
         opacity: 0.9;
       }
     }
   }
 }
+
 .sidebar {
   // max-width: 1200px;
   display: flex;
@@ -383,30 +390,45 @@ nav {
   padding: 0 10px;
   margin: 0 auto;
 
+  .forpc {
+    width: 85%;
+
+    @include v.pad-width {
+      display: none;
+    }
+
+    @include v.phone-width {
+      display: none;
+    }
+  }
+
+  .formobile {
+    @include v.pc-width {
+      display: none;
+    }
+
+    display: block;
+  }
+
   .nav-brand {
     padding: 20px;
-    flex: 0.5;
+    flex: none;
   }
 
   .menu {
-    flex: 3;
     transition: all 0.35s ease-out;
 
-    > li {
+    >li {
       display: inline-block;
-      width: 12%;
+      width: 12.5%;
       text-align: center;
       position: relative;
+
       &:hover {
         & .dropdown-menu {
           width: 100%;
           display: flex;
         }
-      }
-
-      @include v.phone-width {
-        display: flex;
-        flex-direction: column;
       }
     }
 
@@ -451,12 +473,15 @@ nav {
       li {
         padding: 4px 0;
         margin-bottom: 5px;
+
         &:nth-of-type(1) {
           background-color: v.$primary-opacity;
         }
+
         &:nth-of-type(2) {
           background-color: #979797a4;
         }
+
         a {
           color: v.$font-primary;
         }
@@ -474,23 +499,35 @@ nav {
     background-color: transparent;
     transition: background-color 0.4s ease;
 
+    @include v.pad-width {
+      display: none;
+    }
+
+    @include v.phone-width {
+      display: none;
+    }
+
     div {
       display: inline-block;
 
       &.user {
         padding: 10px 20px;
         border-radius: 18px;
-        color: v.$font-primary; 
+        color: v.$font-primary;
         display: none;
       }
+
       &.user-login {
         display: inline-block;
+
         a {
           padding: 10px 25px;
         }
       }
+
       &.user-regist {
         display: inline-block;
+
         a {
           background-color: transparent;
         }
@@ -526,7 +563,7 @@ nav {
           transform: translate(0px, -5px);
           transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
             opacity 0.6s ease;
-        } 
+        }
       }
     }
 
@@ -597,22 +634,28 @@ nav {
         }
       }
     }
+
     &.isUser {
       background-color: v.$primary-opacity;
+
       .account-sub {
         display: block;
       }
+
       .user {
         display: block;
       }
+
       .user-login,
       .user-regist {
         display: none;
       }
+
       &:hover {
         background-color: v.$primary-opacity;
       }
     }
+
     &:hover {
       background-color: transparent;
     }
@@ -624,11 +667,14 @@ nav {
 .section-box {
   .main-title {
     margin-bottom: 30px;
+
     div {
       margin: 0;
+
       &:nth-of-type(1) {
         font-weight: 100;
         font-size: 0.9rem;
+
         &::before {
           content: "";
           display: inline-block;
@@ -640,6 +686,7 @@ nav {
           margin-bottom: 2px;
         }
       }
+
       &:nth-of-type(2) {
         color: v.$primary;
         font-weight: 600;
@@ -653,17 +700,35 @@ nav {
     max-width: v.$max-width;
     margin: 80px auto 50px auto;
     padding: 0 30px;
-    .content {
-      
-    }
-    .content-row{
+
+    .content {}
+
+    .content-row {
       display: flex;
       flex-wrap: wrap;
-      .row-2{
+
+      .row-2 {
         flex-basis: 50%;
+
+        @include v.pad-width {
+          flex-basis: 100%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
       }
-      .row-5{
+
+      .row-5 {
         flex-basis: 20%;
+
+        @include v.pad-width {
+          flex-basis: 25%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 50%;
+        }
       }
     }
   }
@@ -671,16 +736,36 @@ nav {
 
 footer {
   background-color: #fff;
-  &>div{
-   max-width: v.$max-width;
-   margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+
+  &>div {
+    max-width: v.$max-width;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+    @include v.pad-width {
+      flex-direction: column;
+    }
+
+    @include v.phone-width {
+      flex-direction: column;
+    }
+
+    div {
+      text-align: left;
+      @include v.pad-width {
+        text-align: center;
+      }
+
+      @include v.phone-width {
+        text-align: center;
+      }
+    }
   }
- 
+
 }
 
 /* other share */
@@ -688,10 +773,11 @@ a.event-disable {
   pointer-events: none;
   cursor: default;
 }
+
 .small-font {
   font-size: 0.9rem;
 }
+
 .bigger-font {
   font-size: 1.3rem;
 }
-
