--- a/scss/index.scss
+++ b/scss/index.scss
@@ -93,11 +93,14 @@
 
 .showing-list {
   text-align: center;
-  .poster{
-    padding-right: 30px;
+  margin-bottom: 20px;
+  a{
+    .poster{
+      padding-right: 10px;
     img{border-radius: 10px;width: 100%;}
   }
   .movie-title{
+    padding-right: 10px;
     margin-top: 10px;
     font-weight: bold;
     span{
@@ -111,6 +114,7 @@
     padding: 5px 10px;
     display: inline-block;
     color: #000;
+  }
   }
   .y12{background-color: yellow;}
   .y6{background-color: rgb(35, 162, 247);}
