--- a/css/index.css
+++ b/css/index.css
@@ -27,13 +27,38 @@
   display: block;
   text-align: right;
 }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  #landing h1 {
+    font-size: 6rem;
+  }
+}
+@media all and (max-width: 769px) {
+  #landing h1 {
+    font-size: 3rem;
+  }
+}
 #landing .welcome {
   width: 224px;
   height: 224px;
   cursor: pointer;
   position: absolute;
-  bottom: 150px;
-  left: 15vw;
+  bottom: 115px;
+  left: 14vw;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  #landing .welcome {
+    width: 180px;
+    height: 180px;
+    bottom: 80px;
+    left: 10vw;
+  }
+}
+@media all and (max-width: 769px) {
+  #landing .welcome {
+    width: 150px;
+    height: 150px;
+    bottom: 50px;
+  }
 }
 #landing .welcome .text-round {
   width: 100%;
@@ -56,6 +81,18 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  #landing .welcome .mouse {
+    width: 29px;
+    height: 48px;
+  }
+}
+@media all and (max-width: 769px) {
+  #landing .welcome .mouse {
+    width: 26px;
+    height: 45px;
+  }
+}
 #landing .welcome .mouse .scroller {
   width: 3px;
   height: 8px;
@@ -64,8 +101,16 @@
   position: absolute;
   top: 13px;
   left: 14px;
-  -webkit-animation: scroll 1s ease-in infinite;
-          animation: scroll 1s ease-in infinite;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  #landing .welcome .mouse .scroller {
+    left: 12px;
+  }
+}
+@media all and (max-width: 769px) {
+  #landing .welcome .mouse .scroller {
+    left: 11px;
+  }
 }
 
 .start-scroll #landing .landing-page {
