--- a/scss/index.scss
+++ b/scss/index.scss
@@ -29,6 +29,13 @@
       display: block;
       text-align: right;
     }
+      @include v.pad-width {
+          font-size: 6rem;
+        }
+
+        @include v.phone-width {
+          font-size: 3rem;
+        }
   }
 
   .welcome {
@@ -36,8 +43,20 @@
     height: 224px;
     cursor: pointer;
     position: absolute;
-    bottom: 150px;
-    left: 15vw;
+    bottom: 115px;
+    left: 14vw;
+     @include v.pad-width {
+          width: 180px;
+          height: 180px;
+          bottom: 80px;
+          left: 10vw;
+        }
+
+        @include v.phone-width {
+          width: 150px;
+          height: 150px;
+          bottom: 50px;
+        }
 
     .text-round {
       width: 100%;
@@ -58,16 +77,32 @@
       background: url(../image/svg/mouse.svg);
       background-repeat: no-repeat;
       background-size: contain;
+      @include v.pad-width {
+          width: calc(34px - 5px);
+          height: calc(53px - 5px);
+       }
+
+      @include v.phone-width {
+          width: calc(34px - 8px);
+          height: calc(53px - 8px);
+       }
 
       .scroller {
         width: 3px;
         height: 8px;
-        border: 1px solid v.$font-primary;
+        border: 1px solid v.$font-primary; 
         border-radius: 25%;
         position: absolute;
         top: 13px;
         left: 14px;
-        animation: scroll 1s ease-in infinite;
+        // animation: scroll 1s ease-in infinite;
+        @include v.pad-width {
+          left: 12px;
+        }
+
+        @include v.phone-width {
+         left: 11px;
+       }
       }
     }
   }
